revoke token added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.data.mongodb.database=${env.MONGO_DATABASE}
 spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
 
 jwt.secret=${env.SECURITY_JWT_SECRET}
+
+spring.data.mongodb.auto-index-creation=true
